--- a/src/assets/scss/_minireset.scss
+++ b/src/assets/scss/_minireset.scss
@@ -1,26 +1,6 @@
 * {
-  &::-webkit-scrollbar {
-    width: 6px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #e8edf0;
-    border-radius: 3px;
-  }
-}
-
-* {
-  font-family: myriad-pro-regular, arial, sans-serif;
+  font-family: avenir;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-size: 14px;
-}
-
-img {
-  width: 100%;
 }
