--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,10 +1,7 @@
+@import '_fonts';
 @import '_minireset';
-@import '_variables';
 @import '_mixins';
 @import '_layout';
-@import '_colors';
 @import '_utils';
-@import '_modal';
-@import '_animation';
-@import '_typography';
 @import '_grid';
+@import '_variable';
