--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -2,3 +2,31 @@
   font-family: 'avenir';
   src: url('~@/assets/fonts/AvenirLTStd-Medium.otf');
 }
+
+.font-bold {
+  font-weight: bold;
+}
+
+.font-12px {
+  font-size: 12px;
+}
+
+.font-14px {
+  font-size: 14px;
+}
+
+.font-16px {
+  font-size: 16px;
+}
+
+.font-18px {
+  font-size: 18px;
+}
+
+.font-24px {
+  font-size: 24px;
+}
+
+.font-32px {
+  font-size: 32px;;
+}
