--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -46,7 +46,7 @@
   position: absolute;
 }
 
-$sizes:-0,-4,-8, -12, -16, -20, -24, -28, -32, 0, 4, 8, 12, 16, 20, 24, 28, 32, 64;
+$sizes: -4, -8, -12, -16, -20, -24, -28, -32, -36, -40, -44, -48, -52, -56, -60, -64, -68, -72, -80, 0, 4, 8, 12, 16, 20, 24, 28, 32, 36, 40, 44, 48, 52, 56, 60, 64, 68, 72, 80;
 
 @each $size in $sizes {
   // padding
