--- a/src/assets/styles/_body.scss
+++ b/src/assets/styles/_body.scss
@@ -3,6 +3,7 @@
     .col-1 {
         width: 379px;
         flex-basis: 379px;
+        color: $black-darker
     }
     .col-2,
     .col-3,
@@ -10,6 +11,7 @@
     .col-5 {
         width: 188px;
         flex-basis: 188px;
+        color: $black
     }
     .checked {
         width: 22px;
