--- a/src/assets/styles/_footer.scss
+++ b/src/assets/styles/_footer.scss
@@ -1,9 +1,20 @@
 .footer {
+    padding: 50px 150px;
     .question-number {
         width: 60px;
         height: 60px;
         border-radius: 50%;
         background-color: $red-lighter;
         font-size: 40px;
+    }
+    .separator {
+        height: 1px;
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+    .col-0{
+        margin-right: 24px;
+    }
+    .col-1 {
+        margin-left: 24px;
     }
 }
