--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -7,6 +7,7 @@ $black-lighter: #A6ACB6;
 $black-lightest: #D2D6DA;
 $grey: #F4F7F9;
 $gray-lighter: #798391;
+$blue: #0062FF;
 
 $colors: (
     "red": $red,
@@ -19,6 +20,7 @@ $colors: (
     "grey": $grey,
     "white": white,
     "gray-lighter": $gray-lighter,
+    "blue": $blue,
 );
 
 @each $name, $value in $colors {
