--- a/src/assets/styles/_body.scss
+++ b/src/assets/styles/_body.scss
@@ -31,6 +31,9 @@
     }
     .heading {
         border-radius: 4px 4px 0 0;
+        position: sticky;
+        top: 90px;
+        z-index: 888;
         .best-value {
             border: 2px solid $green;
             .best-value-item {
@@ -39,8 +42,14 @@
             }
         }
     }
+    .view-more {
+        position: sticky;
+        top: 90px;
+    }
     .content {
         border-radius: 0 0 4px 4px;
+        position: sticky;
+        top: 90px;
         .col-1,
         .col-2,
         .col-3,
@@ -50,6 +59,8 @@
         }
     }
     .bottom {
+        position: sticky;
+        top: 90px;
         .col-1,
         .col-2,
         .col-3,
@@ -59,20 +70,11 @@
         }
     }
     .overcharge-cost {
+        position: sticky;
+        top: 456px;
         table {
             width: 671px;
-            tr:first-child {
-                background-color: $red-lighter;
-            }
-            tr:last-child {
-                background-color: #FFFFFF;
-                td {
-                    color: $black-darker;
-                }
-            }
-        }
-        h1 {
-            color: $black-darker;
+            box-shadow: 0px 4px 8px rgba(0, 0, 59, 0.12), -1px 0px 4px rgba(0, 0, 59, 0.06), 0px 1px 4px rgba(0, 0, 59, 0.06);
         }
     }
 }
