--- a/src/assets/styles/_body.scss
+++ b/src/assets/styles/_body.scss
@@ -76,5 +76,8 @@
             width: 671px;
             box-shadow: 0px 4px 8px rgba(0, 0, 59, 0.12), -1px 0px 4px rgba(0, 0, 59, 0.06), 0px 1px 4px rgba(0, 0, 59, 0.06);
         }
+        .line-height-center {
+            line-height: normal;
+        }
     }
 }
